--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 			<meta http-equiv="X-UA-Compatible" content="IE=edge">
 			<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
 			<meta name="viewport" content="width=device-width, initial-scale = 1.0, maximum-scale=1.0, user-scalable=no"/>
-	<title>Euro Travel</title>
+	<title>Dr. Madaan's Clinic</title>
 
 	<link rel="stylesheet" href="assets/css/bootstrap.min.css">
 	<link rel="stylesheet" href="assets/css/ionicons.min.css">
@@ -39,7 +39,7 @@
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 				</button>
-				<a class="navbar-brand" href="index.html" title="HOME"><i class="ion-paper-airplane"></i> euro <span>travel</span></a>
+				<a class="navbar-brand" href="index.html" title="HOME"><i class="ion-paper-airplane"></i>Dr. Madaan's <span>Clinic</span></a>
 			</div> <!-- /.navbar-header -->
 
 	    <!-- Collect the nav links, forms, and other content for toggling -->
@@ -77,7 +77,7 @@
 		                <div class="intro">
 		                    <div class="inner-intro">
 		                        <h1 class="header-title">
-		                            to <span>travel</span> is to <span>live</span>
+		                            to <span>Clinic</span> is to <span>live</span>
 		                        </h1>
 		                        <p class="header-sub-title">
 		                            it leaves you speecless, then turns your into a storyteller.
@@ -455,7 +455,7 @@
 	</div> <!-- /.sponsor -->
 
 	<div class="subscribe section-wrapper">
-		<a class="brand-logo" href="index.html" title="HOME"><i class="ion-paper-airplane"></i> Euro <span>Travel</span></a>
+		<a class="brand-logo" href="index.html" title="HOME"><i class="ion-paper-airplane"></i> Dr. Madaan's <span>Clinic</span></a>
 		<p class="subscribe-now">
 			Subscribe to our Newsletter
 		</p>
@@ -488,7 +488,7 @@
 			<div class="row">
 				<div class="col-xs-4">
 					<div class="text-left">
-						&copy; Copyright Euro Travels
+						&copy; Copyright Dr. Madaan's Clinic
 					</div>
 				</div>
 				<div class="col-xs-4">
